右上角样式调整

--- a/src/containers/root-container.less
+++ b/src/containers/root-container.less
@@ -50,6 +50,19 @@
         .profile-link {
             color: @text-color-inverse;
         }
+
+        .header-right-wrapper {
+            display: inline-flex;
+            flex-direction: row;
+            width: 200px;
+            justify-content: space-around;
+
+            .fullscreen {
+                display: inline-flex;
+                align-items: center;
+                color: #fff;
+            }
+        }
     }
 
     .ant-layout-content {
