--- a/src/views/layout/RootContainer.less
+++ b/src/views/layout/RootContainer.less
@@ -19,7 +19,7 @@
     .ant-layout-header {
         display: flex;
         justify-content: space-between;
-        padding-left: 0;
+        padding: 0 10px 0 0;
 
         .header-left-wrapper {
             display: inline-flex;
@@ -67,6 +67,7 @@
 
     .ant-layout-content {
         overflow: auto;
+        margin: 5px 0 5px 5px;
     }
 
     .ant-layout-footer {
