update tag styles

--- a/src/views/layout/Tags.scss
+++ b/src/views/layout/Tags.scss
@@ -4,6 +4,7 @@ $borderColor: #d8d8d8;
 .tags {
     display: flex;
     margin-bottom: 4px;
+    background-color: #b1b1b1;
 
     .tags-scroll {
         position: relative;
