--- a/src/views/layout/RootContainer.less
+++ b/src/views/layout/RootContainer.less
@@ -62,6 +62,15 @@
                 align-items: center;
                 color: #fff;
             }
+
+            .ant-avatar{
+                display: inline-flex;
+                align-items: center;
+                line-height: 64px;
+                justify-content: center;
+                height: 32px;
+                margin: 16px 0;
+            }
         }
     }
 
